integrated game logic functions and created gameflow

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <body>
     <main>
       <h1>Hangman!</h1>
-      <section class="img-container"><img class="img-container__img" src="./imgs/h-10.jpg" /></section>
+      <section class="img-container">
+        <img class="img-container__img" src="./imgs/h-0.jpg" />
+      </section>
 
       <section class="guesses">
         <h1 class="guesses__display"></h1>
